Remove global search and allow per-index only; Update stats
